--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,11 +19,6 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           echo "PYTHON_VERSION=$(cat .python-version)" >> $GITHUB_ENV
-      - uses: actions/setup-python@v4
-        id: cache-poetry
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          cache: "poetry"
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -31,6 +26,11 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: false
           virtualenvs-path: ~/.virtualenvs
+      - uses: actions/setup-python@v4
+        id: cache-poetry
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'poetry'
       - name: Install virtual environment
         run: |
           sudo apt-get install libsnappy-dev
