Add script, pin packages

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 mock = "*"
 pytest-cov = "*"
 jsonschema = "*"
-pylint = "*"
+pylint = "2.17.7"
 pylint-mccabe = "*"
 pylint-quotes = "*"
 pylint-absolute-imports = "*"
@@ -20,12 +20,12 @@ httmock = "*"
 "flake8-print" = "*"
 "flake8-tuple" = "*"
 "flake8-datetimez" = "*"
-moto = "*"
+moto = "4.2.10"
 freezegun = "*"
 pytest-xdist = "*"
 fakeredis = "*"
 mypy = "*"
-black = "*"
+black = "23.11.0"
 pytest-flask = "*"
 pytest = "*"
 pytest-sugar = "*"
@@ -38,6 +38,7 @@ types-python-dateutil = "*"
 pytest-mock = "*"
 types-cachetools = "*"
 types-pytz = "*"
+playwright = "*"
 
 [packages]
 colorama = "*"
