--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ target_version = ['py38']
 [tool.poetry]
 name = "eq-questionnaire-runner"
 version = "0.1.0"
-description = "Python-Flask server side web application"
+description = "Flask server side application which provide a set of functionalities that go into schemas used to create surveys"
 authors = ["ONSDigital"]
 
 [tool.poetry.group.dev.dependencies]
