Pin only required

--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,7 @@ fakeredis = "*"
 mypy = "*"
 black = "23.11.0"
 pytest-flask = "*"
-pytest = "*"
+pytest = "7.4.3"
 pytest-sugar = "*"
 responses = "*"
 types-simplejson = "*"
@@ -71,7 +71,7 @@ coloredlogs = "*"
 uwsgi = "*"
 email-validator = "*"
 itsdangerous = "*"
-google-cloud-pubsub = "*"
+google-cloud-pubsub = "2.18.4"
 google-cloud-tasks = "*"
 simplejson = "*"
 markupsafe = "*"
