pin google cloud pubsub to 2.19.3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ coloredlogs = "*"
 uwsgi = "*"
 email-validator = "*"
 itsdangerous = "*"
-google-cloud-pubsub = "*"
+google-cloud-pubsub = "2.19.3"
 google-cloud-tasks = "*"
 simplejson = "*"
 markupsafe = "*"
