--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 mock = "*"
 pytest-cov = "*"
 jsonschema = "*"
-pylint = "*"
+pylint = "2.17.7"
 pylint-mccabe = "*"
 pylint-quotes = "*"
 pylint-absolute-imports = "*"
