Fix error message

--- a/ci/restore_questionnaire_state.yaml
+++ b/ci/restore_questionnaire_state.yaml
@@ -27,7 +27,7 @@ run:
 
       if [ -z "${BACKUP_NAME}" ]
       then
-        echo "BACKUP_NAME variable is not set"
+        echo "BACKUP_NAME variable must be set"
         exit 1
       fi
 
