--- a/ci/restore_questionnaire_state.yaml
+++ b/ci/restore_questionnaire_state.yaml
@@ -17,7 +17,7 @@ run:
   args:
     - -exc
     - |
-      VARS=('PROJECT_ID' 'BUCKET_NAME' 'BACKUP_NAME', 'FILE_PREFIX')
+      VARS=('PROJECT_ID' 'BUCKET_NAME' 'BACKUP_NAME' 'FILE_PREFIX')
 
       for VAR in "${VARS[@]}"
       do
