--- a/ci/restore_questionnaire_state.yaml
+++ b/ci/restore_questionnaire_state.yaml
@@ -18,8 +18,9 @@ run:
     - -exc
     - |
       PARAMS=('PROJECT_ID' 'BUCKET_NAME' 'BACKUP_NAME' 'FILE_PREFIX')
-      for PARAM in "${PARAMS[@]}"; do
-      : "${!PARAM:?"Error: $PARAM must be set"}"
+      for PARAM in "${PARAMS[@]}"
+      do
+        "${!PARAM:?"Error: $PARAM must be set"}"
       done
 
       export GOOGLE_APPLICATION_CREDENTIALS=~/gcloud-service-key.json
