--- a/Pipfile
+++ b/Pipfile
@@ -38,6 +38,7 @@ types-python-dateutil = "*"
 pytest-mock = "*"
 types-cachetools = "*"
 types-pytz = "*"
+playwright = "*"
 
 [packages]
 colorama = "*"
