--- a/ci/restore_questionnaire_state.yaml
+++ b/ci/restore_questionnaire_state.yaml
@@ -20,7 +20,7 @@ run:
       PARAMS=('PROJECT_ID' 'BUCKET_NAME' 'BACKUP_NAME' 'FILE_PREFIX')
       for PARAM in "${PARAMS[@]}"
       do
-        "${!PARAM:?"Error: $PARAM must be set"}"
+        : "${!PARAM:?"Error: $PARAM must be set"}"
       done
 
       export GOOGLE_APPLICATION_CREDENTIALS=~/gcloud-service-key.json
