remove set default configurations with poetrys installation

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,8 +24,6 @@ jobs:
         with:
           version: 1.8.2
           virtualenvs-create: true
-          virtualenvs-in-project: false
-          virtualenvs-path: ~/.virtualenvs
       - uses: actions/setup-python@v4
         id: cache-poetry
         with:
@@ -63,8 +61,6 @@ jobs:
         with:
           version: 1.8.2
           virtualenvs-create: true
-          virtualenvs-in-project: false
-          virtualenvs-path: ~/.virtualenvs
       - uses: actions/setup-python@v4
         id: cache-poetry
         with:
@@ -102,13 +98,11 @@ jobs:
             sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb
       - name: Write app version
         run: printf "${{ github.event.pull_request.head.sha }}" > .application-version
-      - name: Install poetry
+      - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           version: 1.8.2
           virtualenvs-create: true
-          virtualenvs-in-project: false
-          virtualenvs-path: ~/.virtualenvs
       - uses: actions/setup-python@v4
         id: cache-poetry
         with:
@@ -159,8 +153,6 @@ jobs:
         with:
           version: 1.8.2
           virtualenvs-create: true
-          virtualenvs-in-project: false
-          virtualenvs-path: ~/.virtualenvs
       - uses: actions/setup-python@v4
         id: cache-poetry
         with:
