Add config and formatted files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,5 @@
 [tool.black]
 target_version = ['py37']
+[tool.djlint]
+blank_line_after_tag="load,extends,import,from"
+blank_line_before_tag="load,extends,block"
