Fix templates newline issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,4 @@ target_version = ['py37']
 [tool.djlint]
 blank_line_after_tag="load,extends,import,from"
 blank_line_before_tag="load,extends,block"
+max_line_length=120
