--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,8 @@
 blank_line_after_tag="load,extends,import,from"
 blank_line_before_tag="load,extends,block"
 max_line_length=120
+format_js=false
+exclude=".templates/layouts/_base.html"
 
 [tool.poetry]
 name = "eq-questionnaire-runner"
@@ -45,6 +47,7 @@ types-cachetools = "^5.3.0.7"
 types-pytz = "^2024.1.0.20240203"
 playwright = "^1.42.0"
 black = "^24.2.0"
+djlint = "^1.34.1"
 
 
 [tool.poetry.dependencies]
@@ -86,6 +89,7 @@ pdfkit = "^1.0.0"
 ordered-set = "^4.1.0"
 cachetools = "^5.3.0.7"
 gevent = "^24.2.1"
+djlint = "1.34.1"
 
 [build-system]
 requires = ["poetry-core"]
