--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,62 +1,61 @@
 version: 2
-groups:
-  production-dependencies:
-    dependency-type: "production"
-    patterns:
-    - "flask*"
-    - "google*"
-    - "python"
-    - "colorama"
-    - "grpcio"
-    - "gunicorn"
-    - "pika"
-    - "pyyaml"
-    - "requests"
-    - "sdc-cryptography"
-    - "structlog"
-    - "ua-parser"
-    - "blinker"
-    - "boto3"
-    - "humanize"
-    - "marshmallow"
-    - "jsonpointer"
-    - "redis"
-    - "htmlmin"
-    - "coloredlogs"
-    - "uwsgi"
-    - "email-validator"
-    - "itsdangerous"
-    - "simplejson"
-    - "markupsafe"
-    - "pdfkit"
-    - "ordered-set"
-    - "cachetools"
-    - "gevent"
-
-  development-dependencies:
-    dependency-type: "development"
-    patterns:
-    - "pytest*"
-    - "flake8*"
-    - "pylint*"
-    - "types*"
-    - "pep8"
-    - "mock"
-    - "jsonschema"
-    - "beautifulsoup4"
-    - "httmock"
-    - "moto"
-    - "freezegun"
-    - "fakeredis"
-    - "mypy"
-    - "responses"
-    - "playwright"
-    - "black"
-    - "djlint"
-
 updates:
   - package-ecosystem: "pip"
     directory: "/"
+    interval: "daily"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+        patterns:
+        - "flask*"
+        - "google*"
+        - "python"
+        - "colorama"
+        - "grpcio"
+        - "gunicorn"
+        - "pika"
+        - "pyyaml"
+        - "requests"
+        - "sdc-cryptography"
+        - "structlog"
+        - "ua-parser"
+        - "blinker"
+        - "boto3"
+        - "humanize"
+        - "marshmallow"
+        - "jsonpointer"
+        - "redis"
+        - "htmlmin"
+        - "coloredlogs"
+        - "uwsgi"
+        - "email-validator"
+        - "itsdangerous"
+        - "simplejson"
+        - "markupsafe"
+        - "pdfkit"
+        - "ordered-set"
+        - "cachetools"
+        - "gevent"
+      development-dependencies:
+        dependency-type: "development"
+        patterns:
+        - "pytest*"
+        - "flake8*"
+        - "pylint*"
+        - "types*"
+        - "pep8"
+        - "mock"
+        - "jsonschema"
+        - "beautifulsoup4"
+        - "httmock"
+        - "moto"
+        - "freezegun"
+        - "fakeredis"
+        - "mypy"
+        - "responses"
+        - "playwright"
+        - "black"
+        - "djlint"
     ignore:
       - dependency-name: "pytest*"
         update-types: ["version-update:semver-minor"]
