Add correct interval

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,7 +2,8 @@ version: 2
 updates:
   - package-ecosystem: "pip"
     directory: "/"
-    interval: "daily"
+    schedule:
+      interval: "daily"
     groups:
       production-dependencies:
         dependency-type: "production"
