--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
             - "5000:5000"
 
     eq-questionnaire-launcher:
-        image: onsdigital/eq-questionnaire-launcher:support-prepop-survey-launch
+        image: onsdigital/eq-questionnaire-launcher:latest
         environment:
             SURVEY_RUNNER_URL: http://localhost:5000
             SURVEY_RUNNER_SCHEMA_URL: http://eq-questionnaire-runner:5000
@@ -44,7 +44,7 @@ services:
             - "8000:8000"
 
     sds:
-        image: onsdigital/eq-runner-mock-sds:support-real-prepop-survey-launch
+        image: onsdigital/eq-runner-mock-sds:latest
         networks:
             - eq-env
         restart: always
