--- a/mypy.ini
+++ b/mypy.ini
@@ -107,6 +107,11 @@ disallow_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
 
+[mypy-app.publisher.*]
+disallow_untyped_defs = True
+warn_return_any = True
+no_implicit_optional = True
+
 [mypy-scripts.generate_integration_test]
 disallow_untyped_defs = True
 warn_return_any = True
