Add wildcard to python prod deps

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -10,7 +10,7 @@ updates:
         patterns:
           - "flask*"
           - "google*"
-          - "python"
+          - "python*"
           - "colorama"
           - "grpcio"
           - "gunicorn"
