Wording for clarity

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -59,7 +59,7 @@ updates:
           - "black"
           - "djlint"
     ignore:
-      # Pinned to v2.14.0: problem for translations found with v2.15.0, see: https://github.com/ONSdigital/eq-questionnaire-runner/pull/1384
+      # Temporarily pinned to v2.14.0 - problem for translations found in v2.15.0, see: https://github.com/ONSdigital/eq-questionnaire-runner/pull/1384
       - dependency-name: "babel"
         update-types: ["version-update:semver-major", "version-update:semver-minor"]
       - dependency-name: "pylint*"
