--- a/.pylintrc
+++ b/.pylintrc
@@ -77,7 +77,7 @@ limit-inference-results=100
 
 # List of plugins (as comma separated values of python module names) to load,
 # usually to register additional checkers.
-load-plugins=pylint.extensions.mccabe,pylint_quotes,pylint.extensions.no_self_use,pylint_absolute_imports
+load-plugins=pylint.extensions.mccabe,pylint.extensions.no_self_use,pylint_absolute_imports
 
 # Pickle collected data for later comparisons.
 persistent=yes
@@ -410,6 +410,7 @@ disable=
     invalid-name,
     inconsistent-return-statements,
     duplicate-code,
+    unrecognized-option
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
