--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,8 @@ pep8 = "^1.7.1"
 mock = "^5.1.0"
 pytest-cov = "^5.0.0"
 jsonschema = "^4.21.1"
-pylint = "^2.17.7"
+pylint = "^3.2.5"
 pylint-mccabe = "^0.1.3"
-pylint-quotes = "^0.2.3"
 pylint-absolute-imports = "^1.1.0"
 beautifulsoup4 = "^4.12.3"
 httmock = "^1.4.0"
@@ -50,6 +49,7 @@ types-pytz = "^2024.1.0.20240417"
 playwright = "^1.42.0"
 black = "^24.2.0"
 djlint = "^1.34.1"
+flake8-quotes = "^3.4.0"
 
 
 [tool.poetry.dependencies]
