--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,5 @@ filterwarnings=
 # Ignore node_modules and cloned repos when not in a virtual environment
 exclude = node_modules/*,tests/*,src/*
 max-line-length = 160
-ignore = C815,C816,W503,E203,E704
+inline-quotes = double
+ignore = E704,W503,E203
