Add in additional quotes config for docstring and multiline comments

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,4 +11,7 @@ filterwarnings=
 exclude = node_modules/*,tests/*,src/*
 max-line-length = 160
 inline-quotes = double
+multiline-quotes = double
+docstring-quotes = double
+avoid-escape = True
 ignore = E704,W503,E203
