--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           sudo apt-get install libsnappy-dev
           poetry install
+          poetry show pylint
   node-dependencies:
     runs-on: ubuntu-22.04
     steps:
