Set target branch for one pip ecosystem

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -30,6 +30,7 @@ updates:
       day: "friday"
       time: "08:00"
       timezone: "Europe/London"
+    target-branch: main
     versioning-strategy: increase-if-necessary
     labels:
       - "dependencies"
