--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -124,6 +124,6 @@ updates:
           - "black"
           - "djlint"
     ignore:
-      # "black" temporarily pinned to v2.14.0 - problem for translations found in v2.15.0, see: https://github.com/ONSdigital/eq-questionnaire-runner/pull/1384
+      # "babel" temporarily pinned to v2.14.0 - problem for translations found in v2.15.0, see: https://github.com/ONSdigital/eq-questionnaire-runner/pull/1384
       - dependency-name: "babel"
         update-types: [ "version-update:semver-major", "version-update:semver-minor" ]
