--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ description = "ONS Digital eQ Questionnaire Runner App"
 authors = ["ONSDigital"]
 
 [tool.poetry.group.dev.dependencies]
+# update dependabot.yaml when adding new dependencies
 pep8 = "^1.7.1"
 mock = "^5.1.0"
 pytest-cov = "^5.0.0"
@@ -53,6 +54,7 @@ flake8-quotes = "^3.4.0"
 
 
 [tool.poetry.dependencies]
+# update dependabot.yaml when adding new dependencies
 python = "^3.11.4"
 colorama = "^0.4.6"
 flask = "^3.0.2"
