--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
         "@wdio/local-runner": "^9.0.9",
         "@wdio/mocha-framework": "^9.0.8",
         "@wdio/spec-reporter": "^9.0.8",
-        "eslint": "^9.10.0",
+        "eslint": "^v8.57.1",
         "eslint-cli": "^1.1.1",
         "eslint-config-standard": "^17.1.0",
         "eslint-plugin-import": "^2.28.0",
         "eslint-plugin-json": "^4.0.1",
-        "eslint-plugin-n": "^17.10.3",
+        "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^7.1.0",
+        "eslint-plugin-promise": "^6.6.0",
         "json-web-key": "^0.4.0",
         "jsrsasign": "^11.0.0",
         "lint-staged": "^15.2.10",
