--- a/setup.cfg
+++ b/setup.cfg
@@ -14,4 +14,4 @@ inline-quotes = double
 multiline-quotes = double
 docstring-quotes = double
 avoid-escape = True
-ignore = E704,W503,E203
+ignore = E704,W503,E203,E902
